@@ -1,35 +1,5 @@
-#
-# Officially supported Zulu JDK 
-#
-# For support or general questions go to:
-#
-# https://support.microsoft.com/en-us/help/4026305/sql-contact-microsoft-azure-support
-#
-FROM mcr.microsoft.com/java/jdk:17-zulu-ubuntu
-
-# Set the working directory to '/opt/spring-boot' directory
-WORKDIR /opt/spring-boot
-
-# Download the Application Insights Agent JAR
-RUN apt update && \
-    apt install -y curl && \
-    curl -L -O https://github.com/microsoft/ApplicationInsights-Java/releases/download/3.0.0-PREVIEW.3/applicationinsights-agent-3.0.0-PREVIEW.3.jar
-
-# Expose the ports we're interested in
+FROM openjdk:17
+COPY target/*.jar /app.jar
 EXPOSE 8080
 EXPOSE 8443
-
-# Make Java 8 obey container resource limits, improve performance
-ENV JAVA_OPTS='-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseG1GC -Djava.awt.headless=true'
-
-# Set the container up with an entrypoint so we can make sure any runtime
-# customizations happen at the appropriate time.
-COPY entrypoint.sh .
-ENTRYPOINT ["/opt/spring-boot/entrypoint.sh"]
-RUN chmod a+x entrypoint.sh
-
-# Set the default command to run on boot
-CMD java $JAVA_AGENT -jar spring-boot.jar
-
-# Copy the JAR file
-COPY target/*.jar /opt/spring-boot/spring-boot.jar 
+ENTRYPOINT ["java","-jar", "/app.jar"]
